force-app/main/default/objects/Pipeline_Schedule__c/Pipeline_Schedule__c.object-meta.xml
<CustomObject>
    <label>Pipeline Schedule</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Pipeline Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>