force-app/main/default/objects/Pipeline_Schedule__c/fields/Estimated_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Payment_Date__c</fullName>
    <label>Estimated Payment Date</label>
    <type>Date</type>
</CustomField>