force-app/main/default/objects/Pipeline_Schedule__c/fields/sj_Weight_Amount__c.field-meta.xml
<CustomField>
    <fullName>sj_Weight_Amount__c</fullName>
    <description>Weighted amount utilising the &apos;Likelihood&apos; data found on the related Opportunity</description>
    <formula>Amount__c * 
CASE(
    TEXT( Opportunity__r.Likelihood__c ), 
    &quot;10%&quot;, 0.10, 
    &quot;20%&quot;, 0.20, 
    &quot;30%&quot;, 0.30, 
    &quot;40%&quot;, 0.40, 
    &quot;50%&quot;, 0.50, 
    &quot;60%&quot;, 0.60, 
    &quot;70%&quot;, 0.70, 
    &quot;80%&quot;, 0.80, 
    &quot;90%&quot;, 0.90, 
    0
)</formula>
    <label>Weight Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>